# the-flask

./: .gitignore  Dockerfile  Makefile  dependencies.txt  pyproject.toml
scripts/: wait-for-it.sh
src/: app.py
src/the_flask/: __init__.py
